# vocab_training

./: docker-compose.yml  main.py  pyproject.toml  run_voicevox.py
input/: shin-kanzen-all.csv  shin-kanzen-small.csv
input/apkg/: collection.anki2  collection.anki21b  collection.uncompressed
